Deployment 2f9d4f48-ea12-4739-a3e8-efb58bc94186: Run number 1017

--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -106,7 +106,11 @@
                                                 <label for="agentIndividual" class="mb-3">@content?.IndividualAgentDropdownLabel</label>
                                             }
                                             <select id="agentIndividual" class="form-select">
-                                                <option selected>Select a ...</option>
+                                                <option selected>Select an Agent</option>
+                                                @foreach(var agent in content.MembersInCompany)
+                                                {
+                                                    <option value="@agent.Key">@agent.Name (@agent.Username)</option>
+                                                }
                                             </select>
                                         </div>
 
