Deployment 9d5b2907-a483-4f00-9715-90dfd9ec8395: Run number 1019

--- a/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
@@ -155,6 +155,17 @@
                                                         </td>
                                                     </tr>
                                                 }
+                                                @if (!String.IsNullOrEmpty(memberBoard.LocalBoardFax))
+                                                {
+                                                    <tr>
+                                                        <td class="py-2">
+                                                            Fax
+                                                        </td>
+                                                        <td class="py-2 text-body">
+                                                            @memberBoard.LocalBoardFax
+                                                        </td>
+                                                    </tr>
+                                                }
                                                 @if (!String.IsNullOrEmpty(memberBoard.LocalBoardEmail))
                                                 {
                                                     <tr>
