Deployment d19e278d-467a-4b9c-862a-ff4fafe90fdc: Run number 1026

--- a/src/WRA.Umbraco.Web/Views/SearchResults.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SearchResults.cshtml
@@ -8,6 +8,13 @@
         <div class="result-card p-4 p-lg-5 position-relative">
             <a href="@content.Url()" class="stretched-link text-body text-decoration-none">
                 <h2 class="h5">@content.Name</h2>
+				@if (content.HasValue("visibleToAll"))
+				{
+					@if (content.Value("visibleToAll").ToString() == "False")
+					{
+						<p>Locked</p>
+					}
+				}
             </a>
             @if (content.HasValue("metaDescription"))
             {
