Deployment 9cab11c6-f031-46f4-9f08-97cc7bb3e18c: Run number 1033

--- a/src/WRA.Umbraco.Web/Views/Partials/_miniCalendar.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_miniCalendar.cshtml
@@ -14,7 +14,7 @@
             @foreach (var eventItem in eventsList)
             {
                 <li class="mb-2_5">
-                    <a href="@eventItem.Url()" class="btn btn-link btn-light ms-n2">@eventItem.Name</a>
+                    <a href="@eventItem.Url()" class="btn btn-link btn-light ms-n2 text-start">@eventItem.Name</a>
                     @if (eventItem.HasValue("startDate"))
                     {
                         <p class="mb-0 fs-sm">@String.Format("{0:MMMM d, yyyy}", eventItem.GetProperty("startDate").GetValue())</p>
