--- a/src/WRA.Umbraco.Web/Views/Partials/_loginButton.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_loginButton.cshtml
@@ -2,10 +2,7 @@
 
 @if (Model != null)
 {
-  // member is logged in
-    @* <a href="/logout" class="btn btn-primary btn-sm d-none d-lg-block">Logout</a> *@
-    // my WRA?
-    <a href="/profile" class="btn btn-primary btn-sm d-none d-lg-block">Hello, @Model.Name!</a>
+    <a href="/mywra/profile" class="btn btn-primary btn-sm d-none d-lg-block">Hello, @Model.Name!</a>
 }
 else
 {
