Deployment eecd31dd-a861-4530-99c8-f460d450801d: Run number 1057

--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -66,8 +66,8 @@
                 }
                 @if (content.Pdf != null)
                 {
-                    var pdfFile = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("pdf");
-                    <a href="@pdfFile?.GetCropUrl()" target="_blank" class="btn btn-primary">Download PDF</a>
+                    var pdfFile = content.Pdf;
+                    <a href="@pdfFile.Url()" target="_blank" class="btn btn-primary">Download PDF</a>
                 }
             </div>
             <div class="col-lg-8">
