--- a/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
@@ -45,7 +45,11 @@
 
                         <img src="@imageCurrent.GetCropUrl(width: 320, height: 412, furtherOptions: "&format=WebP")" srcset="@imageCurrent.GetCropUrl(width: 640, height: 824, furtherOptions: "&format=WebP") 2x" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent.Value("altText") ?? "")" />
                     }
-                    <a href="@content.Value("Pdf")"  target="_blank" class="btn btn-primary">Download PDF</a>
+                    @if (content.Value<IPublishedContent>("pdf") != null)
+                    {
+                        var pdfFile = content.Value<IPublishedContent>("pdf");
+                        <a href="@pdfFile.Url()" target="_blank" class="btn btn-primary">Download PDF</a>
+                    }
                 </div>
                 <div class="col-lg-8">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between mb-3">
